tests/out/error/struct/no_field.in.bt
struct Foo {}

fun call_me(arg string){}

fun main() {
	f := Foo{}
	call_me(f.bad1)

	if 123 == f.bad2 {}
}
