tests/out/error/struct/no_field.out
tests/out/error/struct/no_field.in.bt:7:11 error: Foo has no field bad1
tests/out/error/struct/no_field.in.bt:9:13 error: Foo has no field bad2
